--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 /Lib
 /Include
 /Scripts
-# /temp.py
-# /temp2.py
-# /textm
-# /tk1.py
-# /tk3.py
-# /tk34.py
-# /jr.py
+/temp.py
+/temp2.py
+/textm
+/tk1.py
+/tk3.py
+/tk34.py
+/jr.py
+/process.py
